--- a/FRONT/index.html
+++ b/FRONT/index.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="sidenav.js">
+    <link rel="stylesheet" href="./script.js">
     <title>NASA</title>
 </head>
 
@@ -17,24 +18,24 @@
     <!-- Bannière -->
     <div id="banner">
         <div class="logo">
-            <img src="/FRONT/images/NASA_logo.svg.png" alt="logo">             
-            <div class="fireball"><img src="/FRONT/images/logo.png" alt="planet_feu"></div>                 
-        </div>             
-        
+            <img src="/FRONT/images/NASA_logo.svg.png" alt="logo">
+            <div class="fireball"><img src="/FRONT/images/logo.png" alt="planet_feu"></div>
+        </div>
+
         <nav>
             <ul class="navbar">
-                <li><a class="nav-link" href="#">Accueil</a></li>
-                <li><a class="nav-link" href="#">À propos</a></li>
-                <li><a class="nav-link" href="#">Services</a></li>
-                <li><a class="nav-link" href="#">Blog</a></li>
-                <li><a class="nav-link" href="#">Contact</a></li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">À propos</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-            <a href="https://www.decathlon.fr/" target="_blank"><i class="fa-solid fa-shop"></i></a>
+            <a href="https://destination-orbite.net/" target="_blank"><i class="fa-solid fa-shop"></i></a>
         </nav>
 
         <button class="openbtn" onclick="openNav()"><i class="fa fa-bars"></i></button>
     </div>
-    
+
     <!--container -->
     <main>
         <section class="container">
@@ -152,7 +153,7 @@
         <a href="#"><i class="fa-solid fa-shop"></i></a>
     </div>
 
-    <script>
+<!--   <script>
         function openNav() {
             document.getElementById("mySidepanel").style.width = "250px";
         }
@@ -160,7 +161,7 @@
         function closeNav() {
             document.getElementById("mySidepanel").style.width = "0";
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
