validation menu hamburger

--- a/FRONT/index.html
+++ b/FRONT/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="sidenav.js">
     <title>NASA</title>
 </head>
 
@@ -88,10 +87,10 @@
     <aside>
         <h2>Le cosmos - Les exoplanètes</h2>
         <p> Si notre galaxie compte plusieurs dizaines de milliards de planètes semblables à la Terre,
-            la plupart ne se prêtent pas à l’apparition de la vie. En 1995, la découverte de la première 
+            la plupart ne se prêtent pas à l’apparition de la vie. En 1995, la découverte de la première
             exoplanète une planète située en dehors de notre Système solaire ouvre considérablement le champ
-            de la recherche scientifique. Aujourd’hui, quelque 4 500 exoplanètes sont recensées, tandis que des 
-            appareils de plus en plus sophistiqués permettent d’en étudier les caractéristiques. 
+            de la recherche scientifique. Aujourd’hui, quelque 4 500 exoplanètes sont recensées, tandis que des
+            appareils de plus en plus sophistiqués permettent d’en étudier les caractéristiques.
             Réunissent-elles les conditions nécessaires au développement de la vie ?
         </p>
     </aside>
@@ -135,6 +134,16 @@
             <a href="mailto:dslame@gmail.com">Contactez-nous</a>
         </div>
     </footer>
+
+    <div id="mySidepanel" class="sidepanel">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="#">Accueil</a>
+        <a href="#">À propos</a>
+        <a href="#">Services</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="https://destination-orbite.net/" target="_blank"><i class="fa-solid fa-shop"></i></a>
+    </div>
 
     <script>
         function openNav() {
